--- a/eksamens_projekt_2025/andre_html/spil.html
+++ b/eksamens_projekt_2025/andre_html/spil.html
@@ -7,31 +7,31 @@
     <title>Fish-man</title>
     <link
       rel="shortcut icon"
-      href="../exd-spil/img/vector_fish.svg"
+      href="../images/spil/vector_fish.svg"
       type="image/x-icon"
     />
     <link
       rel="shortcut icon"
-      href="../exd-akvarie/img/nemofish.png"
+      href="../images/forside/nemofish.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/spil.css" />
   </head>
   <body>
     <button id="tilbage">Tilbage</button>
     <div id="game">
       <div id="dodger">
-        <img id="dodger" src="../exd-spil/img/vector_fish.svg" alt="dodger" />
+        <img id="dodger" src="../images/spil/vector_fish.svg" alt="dodger" />
       </div>
     </div>
     <audio id="movementSound">
-      <source src="../exd-spil/audio/movement_sound.mp3" type="audio/mp3" />
+      <source src="../sound/spil/movement_sound.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
     <audio id="gameoverSound">
-      <source src="../exd-spil/audio/gameover_sound.mp3" type="audio/mp3" />
+      <source src="../sound/spil/gameover_sound.mp3" type="audio/mp3" />
       Your browser does not support the audio element.
     </audio>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="../js/spil.js"></script>
   </body>
 </html>
