--- a/eksamens_projekt_2025/andre_html/facts.html
+++ b/eksamens_projekt_2025/andre_html/facts.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Fiske fakta</title>
-    <link rel="shortcut icon" href="img/greenfish.png" type="image/x-icon"/>
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="shortcut icon" href="../images/facts/greenfish.png" type="image/x-icon"/>
+    <link rel="stylesheet" href="../css/facts.css"/>
   </head>
   <body>
     <section class="bg">
@@ -23,46 +23,46 @@
       </div>
 
       <div class="pirat" id="piratskib">
-        <img src="img/piratskib.png" alt="sunkent piratskib"/>
+        <img src="../images/facts/piratskib.png" alt="sunkent piratskib"/>
       </div>
 
       <button id="tilbage">Tilbage</button>
 
       <div class="image-fish">
         <div class="image-fish" id="gul-kirurgfisk">
-          <img src="img/gul-kirurgfisk.svg" alt="gul-kirurgfisk"/>
+          <img src="../images/facts/gul-kirurgfisk.svg" alt="gul-kirurgfisk"/>
         </div>
 
         <div class="image-fish" id="dvaergkejserfisk">
-          <img src="img/dvaergkejserfisk.svg" alt="dvaergkejserfisk"/>
+          <img src="../images/facts/dvaergkejserfisk.svg" alt="dvaergkejserfisk"/>
         </div>
 
         <div class="image-fish" id="paletkirurgfisk">
-          <img src="img/paletkirurgfisk.svg" alt="paletkirurgfisk"/>
+          <img src="../images/facts/paletkirurgfisk.svg" alt="paletkirurgfisk"/>
         </div>
 
         <div class="image-fish" id="klovnfisk">
-          <img src="img/klovnfisk.svg" alt="klovnfisk"/>
+          <img src="../images/facts/klovnfisk.svg" alt="klovnfisk"/>
         </div>
 
         <div class="image-fish" id="pudsefisk">
-          <img src="img/pudsefisk.svg" alt="pudsefisk"/>
+          <img src="../images/facts/pudsefisk.svg" alt="pudsefisk"/>
         </div>
 
         <div class="image-fish" id="hvidstrubet-kirurgfisk">
-          <img src="img/hvidstrubet-kirurgfisk.svg" alt="hvidstrubetkirurgfisk"/>
+          <img src="../images/facts/hvidstrubet-kirurgfisk.svg" alt="hvidstrubetkirurgfisk"/>
         </div>
 
         <div class="image-fish" id="pincetfisk">
-          <img src="img/pincetfisk.svg" alt="pincetfisk"/>
+          <img src="../images/facts/pincetfisk.svg" alt="pincetfisk"/>
         </div>
 
         <div class="image-fish" id="sortbaandet-kirurgfisk">
-          <img src="img/sortbaandet-kirurgfisk.svg" alt="sortbaandetkirurgfisk"/>
+          <img src="../images/facts/sortbaandet-kirurgfisk.svg" alt="sortbaandetkirurgfisk"/>
         </div>
 
         <div class="image-skattekiste" id="skattekiste">
-        <img src="img/skattekiste.png" alt="skattekiste"/>
+        <img src="../images/facts/skattekiste.png" alt="skattekiste"/>
         </div>
 
     </section>
@@ -70,6 +70,6 @@
     <!-- Fakta pop-up boks -->
     <div id="tooltip" class="facts"></div>
 
-    <script src="js/animate-objects-on-road.js"></script>
+    <script src="../js/facts.js"></script>
   </body>
 </html>
