--- a/eksamens_projekt_2025/index.html
+++ b/eksamens_projekt_2025/index.html
@@ -45,24 +45,15 @@
         <img src="images/forside/nemofish.png" alt="nemofish" />
       </div>
 
-      <button class="image-button" id="play-button">
-        <a href="andre_html/spil.html"
-          ><img src="images/forside/play.png" alt="play-button" />
-          <span> Start spil </span></a
-        >
-      </button>
+      <a href="andre_html/spil.html" class="image-button" id="play-button">
+          <img src="images/forside/play.png" alt="play-button" />
+          <span> Start spil </span>
+      </a>
 
-      <button class="image-button" id="fish-button">
-        <a href="andre_html/facts.html">
+      <a href="andre_html/facts.html" class="image-button" id="fish-button">
           <img src="images/forside/fishfacts.png" alt="fish-button" />
-          <span> Fiske fakta </span></a
-        >
-      </button>
-
-      <button class="image-button" id="extra-button">
-        <img src="images/forside/extra-button.png" alt="extra-button" />
-        <span> Knap </span>
-      </button>
+          <span> Fiske fakta </span>
+      </a>
 
       <div class="image-skattekiste" id="skattekiste">
         <img src="images/forside/skattekiste.png" alt="skattekiste" />
