--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Akvarie</title>
     <link rel="shortcut icon" href="images/forside/bubbles.png" type="image/x-icon" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="html" href="andre_html/facts.html" />
-    <link rel="html" href="andre_html/spil.html" />
+    <link rel="html" href="andre-html/facts.html" />
+    <link rel="html" href="andre-html/spil.html" />
   </head>
   <body>
     <section class="bg">
@@ -45,12 +45,12 @@
         <img src="images/forside/nemofish.png" alt="nemofish" />
       </div>
 
-      <a href="andre_html/spil.html" class="image-button" id="play-button">
+      <a href="andre-html/spil.html" class="image-button" id="play-button">
           <img src="images/forside/play.png" alt="play-button" />
           <span> Start spil </span>
       </a>
 
-      <a href="andre_html/facts.html" class="image-button" id="fish-button">
+      <a href="andre-html/facts.html" class="image-button" id="fish-button">
           <img src="images/forside/fishfacts.png" alt="fish-button" />
           <span> Fiske fakta </span>
       </a>
