Titel til fiske fakta siden tilføjet
"Fiske fakta" bobel tilføjet som titel på fakta siden.

Unødvendige bobbler fjernet fra fakta sidens HTML.

Unødvendige class definitioner fjernet fra alle fiskene på fakta siden.

--- a/andre-html/facts.html
+++ b/andre-html/facts.html
@@ -9,59 +9,51 @@
   </head>
   <body>
     <section class="bg">
-      <div class="bubbles" aria-hidden="true">
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-        <div class="bubble"></div>
-      </div>
-
       <div class="pirat" id="piratskib">
         <img src="../images/facts/piratskib.png" alt="sunkent piratskib"/>
       </div>
 
       <button id="tilbage">Tilbage</button>
 
+      <div class="image-button" id="fish-button">
+        <img src="../images/facts/fishfacts.png" alt="facts title">
+        <span>Fiske fakta</span>
+      </div>
+
       <div class="image-fish">
-        <div class="image-fish" id="gul-kirurgfisk">
+        <div id="gul-kirurgfisk">
           <img src="../images/facts/gul-kirurgfisk.svg" alt="gul-kirurgfisk"/>
         </div>
 
-        <div class="image-fish" id="dvaergkejserfisk">
+        <div id="dvaergkejserfisk">
           <img src="../images/facts/dvaergkejserfisk.svg" alt="dvaergkejserfisk"/>
         </div>
 
-        <div class="image-fish" id="paletkirurgfisk">
+        <div id="paletkirurgfisk">
           <img src="../images/facts/paletkirurgfisk.svg" alt="paletkirurgfisk"/>
         </div>
 
-        <div class="image-fish" id="klovnfisk">
+        <div id="klovnfisk">
           <img src="../images/facts/klovnfisk.svg" alt="klovnfisk"/>
         </div>
 
-        <div class="image-fish" id="pudsefisk">
+        <div id="pudsefisk">
           <img src="../images/facts/pudsefisk.svg" alt="pudsefisk"/>
         </div>
 
-        <div class="image-fish" id="hvidstrubet-kirurgfisk">
+        <div id="hvidstrubet-kirurgfisk">
           <img src="../images/facts/hvidstrubet-kirurgfisk.svg" alt="hvidstrubetkirurgfisk"/>
         </div>
 
-        <div class="image-fish" id="pincetfisk">
+        <div id="pincetfisk">
           <img src="../images/facts/pincetfisk.svg" alt="pincetfisk"/>
         </div>
 
-        <div class="image-fish" id="sortbaandet-kirurgfisk">
+        <div id="sortbaandet-kirurgfisk">
           <img src="../images/facts/sortbaandet-kirurgfisk.svg" alt="sortbaandetkirurgfisk"/>
         </div>
 
-        <div class="image-skattekiste" id="skattekiste">
+        <div id="skattekiste">
         <img src="../images/facts/skattekiste.png" alt="skattekiste"/>
         </div>
 
