--- a/andre-html/facts.html
+++ b/andre-html/facts.html
@@ -15,10 +15,10 @@
 
       <button id="tilbage">Tilbage</button>
 
-      <div class="image-button" id="fish-button">
+      <a href="../index.html" class="image-button" id="fish-button">
         <img src="../images/facts/fishfacts.png" alt="facts title">
         <span>Fiske fakta</span>
-      </div>
+      </a>
 
       <div class="image-fish">
         <div id="gul-kirurgfisk">
@@ -33,7 +33,7 @@
           <img src="../images/facts/paletkirurgfisk.svg" alt="paletkirurgfisk"/>
         </div>
 
-        <div id="klovnfisk">
+        <div id="klovnefisk">
           <img src="../images/facts/klovnfisk.svg" alt="klovnfisk"/>
         </div>
 
@@ -52,6 +52,7 @@
         <div id="sortbaandet-kirurgfisk">
           <img src="../images/facts/sortbaandet-kirurgfisk.svg" alt="sortbaandetkirurgfisk"/>
         </div>
+      </div>
 
         <div id="skattekiste">
         <img src="../images/facts/skattekiste.png" alt="skattekiste"/>
