--- a/andre-html/facts.html
+++ b/andre-html/facts.html
@@ -58,6 +58,11 @@
         <img src="../images/facts/skattekiste.png" alt="skattekiste"/>
         </div>
 
+        <div id="facts-bubble">
+          <img src="../images/facts/bobble.svg" alt="Tryk på en fisk og få fakta">
+          <span>Tryk på en fisk for at lære om den!</span>
+        </div>
+
     </section>
 
     <!-- Fakta pop-up boks -->
