--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="html" href="andre-html/facts.html" />
-    <link rel="html" href="andre-html/spil.html" />
   </head>
   <body>
     <section class="bg">
@@ -98,12 +96,12 @@
         <img src="images/forside/nemofish.png" alt="nemofish" />
       </div>
 
-      <a href="andre-html/spil.html" class="image-button" id="play-button">
+      <a href="spil.html" class="image-button" id="play-button">
         <img src="images/forside/play.png" alt="play-button" />
         <span> Spil </span>
       </a>
 
-      <a href="andre-html/facts.html" class="image-button" id="fish-button">
+      <a href="facts.html" class="image-button" id="fish-button">
         <img src="images/forside/fishfacts.png" alt="fish-button" />
         <span> Fiske fakta </span>
       </a>
