--- a/facts.html
+++ b/facts.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Fiske fakta</title>
-    <link rel="shortcut icon" href="./images/facts/greenfish.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="./images/facts/piratskib.png" type="image/x-icon"/>
     <link rel="stylesheet" href="./css/facts.css"/>
   </head>
 
