--- a/facts.html
+++ b/facts.html
@@ -14,6 +14,10 @@
         <img src="./images/facts/piratskib.png" alt="sunkent piratskib"/>
       </div>
 
+      <div id="skattekiste">
+        <img src="./images/facts/skattekiste.png" alt="skattekiste" />
+      </div>
+
       <a href="./index.html" id="tilbage">
         <img src="./images/facts/tilbage-fisk.svg" alt="gul tilbage fisk">
       </a>
@@ -52,10 +56,6 @@
         </div>
       </div>
 
-      <div id="skattekiste">
-        <img src="./images/facts/skattekiste.png" alt="skattekiste" />
-      </div>
-
       <div id="facts-bubble">
         <img src="./images/facts/bobble.svg" alt="Tryk på en fisk og få fakta"/>
         <span>Tryk på en fisk for at lære om den!</span>
@@ -64,6 +64,7 @@
 
     <!-- Fakta pop-up boks -->
     <div id="tooltip" class="facts"></div>
+    <div id="overlay"></div>
 
     <script src="../js/facts.js"></script>
   </body>
