--- a/spil.html
+++ b/spil.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Pac-Nemo</title>
     <link rel="shortcut icon" href="./images/spil/nemofish.svg" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="../css/spil.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/spil.css"/>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
 
     <div id="game">
       <div id="pacnemo">
-        <img id="dodger" src="../images/spil/nemofish.svg" alt="dodger"/>
+        <img id="dodger" src="./images/spil/nemofish.svg" alt="dodger"/>
       </div>
     </div>
 
@@ -31,6 +31,6 @@
       <source src="./sound/spil/coin-sound.mp3">
     </audio>
 
-    <script src="../js/spil.js"></script>
+    <script src="./js/spil.js"></script>
   </body>
 </html>
